Added the --skip-warnings flag to the modify-domain API command, to ignore warnings related to new features from a plan change.
MySQL connection limits for domain owners and mailboxes can now be set at the template level, and will be applied to new virtual servers and mail users with database access.
When the email feature is disabled for a domain, all mail aliases are now removed and saved by Virtualmin. If email is later re-enabled, aliases will be restored.
Expanded the Virtualmin plugin API to allow a plugin to replace the core Apache website feature, for example with Nginx.
Backups now include the Dovecot control files of users when they are stored outside the home directory, so that message UIDs are preserved when the domain is restored on another system.
The post-installation wizard now prompts for you to select a MySQL configuration size appropriate for the available memory on your system, and applies it to /etc/my.cnf.
---- Changes since 3.89 ----
Updated the phpMyAdmin script installer to version 3.4.9, Drupal to 7.10, Moodle to 2.2, WordPress to 3.3, RoundCube to 0.7, SugarCRM to 6.3.1, SMF to 2.0.2, FosWiki to 1.1.4, WHMCS to 5.0.3, and MoinMoin to 1.8.9.
The script installer update process can now detect new installer releases that don't change the application version.
Added the modify-proxy API command, to update an existing proxy balancer.
The warning when multiple SSL sites share the same IP can now be disabled if your webserver supports SNI, via a new option on the Virtualmin Configuration page.
Backups now create a .dom file in the same directory as the tar.gz file, which contains information about the domains included and is used to speed up the restore process.
A new option on the Virtualmin Configuration page allows domain owners to restore backups made by root for their own domains. Because root backups are considered secure, the domain owner can restore all settings, including the Apache and DNS configuration.