@@ -161,11 +161,16 @@ print &ui_hidden_table_end("features");
 # Build destination field inputs
 @dests = &get_scheduled_backup_dests($sched);
 push(@dests, undef) if ($in{'sched'});
+@purges = &get_scheduled_backup_purges($sched);
 @dfields = ( );
 $i = 0;
 foreach $dest (@dests) {
 	$dfield = &show_backup_destination("dest".$i, $dest, $cbmode == 3,
 					   $d, $nodownload, 1);
+	$dfield .= &hlink($text{'backup_purge'}, "backup_purge")." ".
+		   &ui_opt_textbox("purge".$i, $purges[$i], 5,
+                        $text{'backup_purgeno'}, $text{'backup_purgeyes'})." ".
+		   $text{'newbw_days'};
 	if (!$dest && $in{'sched'}) {
 		# Last option is hidden
 		$dfield = &ui_hidden_start($text{'backup_adddest'},
@@ -244,12 +249,6 @@ if ($in{'sched'} || $in{'new'}) {
 	# Enabled/disabled input
 	print &ui_table_row(&hlink($text{'backup_when'}, "backup_when"),
 		&virtualmin_ui_show_cron_time("enabled", $sched->{'enabled'} ? $sched : undef, $text{'backup_disabled'}));
-
-	# Purge old backups
-	print &ui_table_row(&hlink($text{'backup_purge'}, "backup_purge"),
-		&ui_opt_textbox("purge", $sched->{'purge'}, 5,
-			$text{'backup_purgeno'}, $text{'backup_purgeyes'})." ".
-		$text{'newbw_days'});
 
 	# Commands to run before and after
 	if (&can_backup_commands()) {
