@@ -2238,7 +2238,7 @@ backup_started2=.. started.
 backup_epurge=Missing or non-numeric number of days to delete old backups after
 backup_epurgetime=Deletion of old backups is only supported when a date-based destination is used, and <b>strftime substitutions</b> are enabled
 backup_epurgepath=Deletion of old backups cannot be enabled, as the base directory could not be extracted from the destination path. It must be a path like <tt>/backup/virtualmin-%d-%m-%Y</tt>, and cannot be a top-level directory
-backup_purging=Deleting backups older than $1 days ..
+backup_purging2=Deleting backups from $2 older than $1 days ..
 backup_purgenobase=.. could not work out base directory from destination
 backup_deletingdir=Deleting directory $1, which is $2 days old ..
 backup_deletingfile=Deleting file $1, which is $2 days old ..
@@ -2279,6 +2279,7 @@ backup_vmailserver_supp=.. server not supported
 restore_title=Restore Virtual Servers
 restore_header=Options for restoring backup
 restore_src=Restore source
+restore_madeat=Backup made at
 restore_doms=Servers to restore
 restore_all=All in file
 restore_now=Show What Will Be Restored
@@ -4435,6 +4436,7 @@ s3_edelete=Failed to delete S3 bucket : $1
 s3_edeletefile=Failed to delete S3 file : $1
 s3_ecreate=Failed to create S3 bucket : $1
 s3_einfo=Failed to upload information file : $1
+s3_edom=Failed to upload domain file : $1
 s3_elist2=Failed to list S3 bucket : $1
 
 tdelete_err=Failed to delete templates
@@ -5404,6 +5406,7 @@ backuplog_ok=Search
 backuplog_match=Showing logs matching $1 ..
 backuplog_days=Showing logs from last $1 days ..
 backuplog_when=Started
+backuplog_who=Made by
 backuplog_len=Run time
 backuplog_size=Final size
 backuplog_ok2=OK?
