@@ -111,9 +111,9 @@ if ($multi) {
 			$s->{'email_err'} ? "Only on failure" : "Always","\n";
 		print "    Notify domain owners: ",
 			$s->{'email_doms'} ? "Yes" : "No","\n";
-		if ($s->{'purge'}) {
+		foreach $purge (&get_scheduled_backup_purges($s)) {
 			print "    Delete old backups after: ",
-			      "$s->{'purge'} days\n";
+				($purge ? "$purge days" : "Never"),"\n";
 			}
 		}
 	}
